feat(waypoint): add local waypoint set management
Persist player-defined waypoint sets with schema v1 migration and future-schema protection. Add create, rename, cascading delete, current-filter multi-select, and all-or-nothing batch moves with cross-world and read-only guards.\n\nExpose immutable snapshots for a future waypoint HUD without adding HUD rendering.